# ChangeLog for app-backup/backintime
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.20 2014/04/24 10:11:40 xmw Exp $

*backintime-1.0.34 (24 Apr 2014)

  24 Apr 2014; Michael Weber <xmw@gentoo.org> +backintime-1.0.34.ebuild:
  Version bump (bug 488350).

  28 Jul 2013; Jonathan Callen <jcallen@gentoo.org> backintime-1.0.24-r1.ebuild:
  Fix dependencies, add REQUIRED_USE

*backintime-1.0.24-r1 (27 Jun 2013)

  27 Jun 2013; Michael Weber <xmw@gentoo.org> +backintime-1.0.24-r1.ebuild,
  -backintime-1.0.24.ebuild:
  Depends on dev-python/keyring (thanks Patrick Nicolas, bug 474896)

  25 Jun 2013; Michael Weber <xmw@gentoo.org> backintime-1.0.24.ebuild:
  Fix LINGUAS handling (bug 474732, thanks Frank Ridderbusch)

*backintime-1.0.24 (23 Jun 2013)

  23 Jun 2013; Michael Weber <xmw@gentoo.org> +backintime-1.0.24.ebuild,
  +files/backintime-1.0.24-dont-install-license.patch:
  Version bump (bug 472552), respect LINGUAS (bug 438270).

*backintime-1.0.8-r1 (10 Nov 2011)

  10 Nov 2011; Michael Weber <xmw@gentoo.org> -backintime-1.0.6.ebuild,
  -backintime-1.0.6-r1.ebuild, +backintime-1.0.8-r1.ebuild:
  Improve python code (bug 308307)

  23 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  backintime-1.0.6.ebuild, backintime-1.0.6-r1.ebuild, backintime-1.0.8.ebuild:
  Use correct slot of pygobject.

  25 Sep 2011; Michael Weber <xmw@gentoo.org> backintime-1.0.6-r1.ebuild,
  backintime-1.0.8.ebuild:
  Fixed typo kd4 (bug 384413, thanks to Nicolas)

*backintime-1.0.8 (25 Sep 2011)
*backintime-1.0.6-r1 (25 Sep 2011)

  25 Sep 2011; Michael Weber <xmw@gentoo.org> backintime-1.0.6.ebuild,
  +backintime-1.0.6-r1.ebuild, +files/backintime-1.0.6-wrapper.patch,
  +backintime-1.0.8.ebuild, metadata.xml:
  Improved python code and version bump (thanks to Milton Yates for the
  detailed report on bug 382287), taking care of this one
