@@ -7,18 +7,17 @@ AUX backintime-1.0.4-fix-configure-warning.diff 541 SHA256 3984fc7ff00b1de4c0491
 AUX backintime-1.0.4-kde4-root.desktop 275 SHA256 3fbb0c720a33d1aa740c54c3d40448fc8dcf56208e16d91105bdf90149ca791a SHA512 aba498cf0d3dc6f90d39e9b4053498ce48d42e06a4bd6434cad478d5de13c570133cefdbba0669fee07537f012f117102cc79ebaca9b653bce58b50c94f78267 WHIRLPOOL 851c30dc8726c42fcc850499cc5484a8355dd9f4e3b4e760e443776fe20739450b388afe0e25463ec88e94345991ce38a118a4cde51bf5db96973c2542a44090
 AUX backintime-1.0.6-wrapper.patch 1260 SHA256 5e5bb5739447af8368dff03c9c981dbd75dcbea8023851f7ed40db3c4b7ee318 SHA512 b7850a99c27c6f1fb6ce50eeb9322dabe6ad7777d4f42b6c9e72584dbd7a80656475c20de2b270a942fb7eefcb2d383760dd7a06424e6639d5e7bac95f91e746 WHIRLPOOL d240d07e26d78010ccc0015ce0a3510a00bd9bc1a650395f044dffaaa98d8f5acdd5ee06cb5cf8de9a16f1ff815548a42fae7ac25afec2160d708f3c138aa0d5
 DIST backintime-1.0.24.tar.gz 507183 SHA256 5d9bac6fd74dd2258786b3481af260beb0f544d0e3560a0db2c8c0a87973384d SHA512 57469409e101207dd0c90f47ac7a709f5c7faab2cd7c60ff014a431912483b87e677bb7d0d2e25609d318f2a7ceb539bac4cc52bf7284d987200d98f2be670a7 WHIRLPOOL 476c158744918510d26d627f9cb833149ef99af85d3d423de2a2e61bc995032131f86df194825876f81ecb756109b328118be741f92cc98f11f7340c1a1e10ca
-DIST backintime-1.0.34.tar.gz 905704 SHA256 2e1846e32e0649d4c0562c5c3821373354591b1ed22116066f1013c7775ea9d6 SHA512 f9347ed6d872aceea67f61faa3669d5edaf0176a6b4b50fd760d58a0fa087ffe8050a92d573f5ccd3c552428b08ef796daad0ca199c98537db39d2ab822aa861 WHIRLPOOL 63293e3004f81ee44545b33bacf847d27e0d535a6020794d300845c3235169e011a86e8b9cfb9f628c6fae00e5ed7ad43b0c69ff82ab5df2befc66b9ee33fb62
-DIST backintime-1.0.8_src.tar.gz 291473 SHA256 fb83736ae0671b0d63468a9d39a29334320d93df004911cc192b1989df97d931 SHA512 6678420824a509bc12251fdabee83c3ec6c2a1418c3e978d9985817ff8161f5992a7c35a2fc28812bde085d6f1d450283a7dd3f690323479ade699e8fb833977 WHIRLPOOL a6d0d76ba922584321977f677c0f2e9deb654aa907bfdadd190230e101b67c048585c7a729ab732d1f5b2a67f789f47c7e610c232ab72f7c37e72edb6ae69f15
-EBUILD backintime-1.0.24-r1.ebuild 2356 SHA256 5f3f4b4a719d396a3bc843f8cde9f2a33f4548a0821499c431dc09d1a798ff53 SHA512 7ea830251596dd4bbd38384d6c575e282a8d12b1eb44eca4d72d9987e58994f73a6e401cdb58ba5c1a315e0cbd966c47d0c436dd3fb52507d4aec0ea179be899 WHIRLPOOL 5cced4014b8076bb2f97e68fdb9bb8261b729ab5207491b38cc6397ea8f0d6a8211b0a215f391974c3d82eb63362c4b36d909e501126754d00f68f8830c62227
-EBUILD backintime-1.0.34.ebuild 2284 SHA256 86beea08b525032a2e5a9bd8fa7dc04af9a5c2ca4ea427b15b66a629461c6980 SHA512 88059c6de2b85de93577e9f07d32c033c460d9bbe3738388137596c49b09ea01ebc514776cc7a4ed2bcdec96c8022d02bf96fc8ef63f99cabc909ef5c71c2d4e WHIRLPOOL 49b00160b0fec330a74b7459aad8728eb21767b1797bc933bdeaa7c7f86108299de3b7476f77ef9ab19e8f868ef9c2fa69851780c374df2f65e8eb9ff1796a30
-EBUILD backintime-1.0.8-r1.ebuild 2180 SHA256 9f3bf91da4e5f0ea90ad28771b35ecc4d127ba4a3e604115df9d6bdaf61688ea SHA512 cb5a40770dc47a99ffbe0d5eaad9d6016a8a6def5baeb5196f972b41885aa4a1bdb23ec3c2c7f9e490803eaa152c258b24a5d3f01ea3fc1b53f0712819c00072 WHIRLPOOL f371c29ffe0e75046a2de3ea310f8b25892ab8ca6b0f153574c76cfc79066df714e28f30e6ba3faca859aa4d73648891a8abb24fea35edb8a79e6c9129547025
-EBUILD backintime-1.0.8.ebuild 2120 SHA256 0869bf8f756f67b4c5c6ef984bdc6528537ae2f6a4c150132231992f50468647 SHA512 39885bf935b660e16db009d0bd99321c4ba310ab24aba3db4ded661f54c2cf050e4319fa6bf51ab1acba95c42aad9d454f51096b036d548850eefd5e434707ce WHIRLPOOL 004ed5d2fa964b519c25fa202291dfd2243d25ae84d5ecaa6b0abae392872ed685ac30c1f14fd64dba88fbac69241a8c1d63df09c9e3a84dab9148f115d48884
-MISC ChangeLog 4006 SHA256 4009cc1c55fda0652d561940011c1ca4ecc56c2214d487e83950d05dcfac43cb SHA512 d3ca78bf1b08ba3e3259c9ee8ec41b44137d18ea5aed2bec84f14799de2213bbd17ed4a222ce941b1d2c927663ce200bc7d464171de31e1ecf34448433de4bac WHIRLPOOL 7a32aa6eb57e7052bf0a34be644f61a607f86a912bed39184bc6951689419fc235db33a56555bb3b1e210f27d0852446e504b52f6059b38b7a58a7338ab0d78f
+DIST backintime-1.0.36.tar.gz 594612 SHA256 40ff1ed81fa4de3302acbc0154f2ec9ee17e77423d35e17c66eb110c2c171666 SHA512 0f78041c90c8242d6e4aabc97c67156e1ecf7d593adb40e417959f0d2dd0432ae95e3dd4c04603b170e7271f82e01ced4e7233794d81333e8b9ab3e9b9721776 WHIRLPOOL 8d9e752bae1000cd9690da095fa382c5deac8af8f107f3b1d39f7bf1d5f59091ccfc0b6f6c9b779f94fedd13e2e2daf7f2d53f5b54cb4050548eeb0345ba878e
+EBUILD backintime-1.0.24-r1.ebuild 2332 SHA256 3ff54beac303011686b4d1c632e22001ec88f73ad5488f543048b7505ecc7a92 SHA512 f9ca443d992bb7e8f1a7f3081fc117ff93ae73471c1e41d06f2b41f0a80063a065458a64765c9e6b9a019da215222aaee7b878f9892bc7e87170fe9372e1ff7a WHIRLPOOL 395b0891a8a97151230275ebcc23b919817dbde4a20482fd2b1d186b58d0618bbbd0d92a79c36f62fb4456e5c6c55f18640da04f99a6a2fe2a269a24563a035a
+EBUILD backintime-1.0.36.ebuild 2264 SHA256 c331d0fd3111a75179d177cb511abe64f2ac9612e6ba0a581da5ed552799dce7 SHA512 abcd356b755f0f61da3262b114243b3438326f8079ab05a0ef38a02a8f477e9ac4276450bf3381ed6c84396ac36eb5297275a6787fc76f0f4ce41447ec472184 WHIRLPOOL 0a0c8aea4b47b5338cfd7e3a6f5e0bb0578bdd7bc2d149862d1a783ef1c519463b3d6c6b54dcaead0affa120d966375387d3e46d8784448592cc3bebe642f4c8
+MISC ChangeLog 4343 SHA256 947b14bcb16360d115a6883ef35acce68c5e3dae58acf352386fc5d13088a0a9 SHA512 52b39687af5feec0ac08171abcb165c0d318be883e69bd7409e752ad0fbb7e29a5f6f334ebc7c87cc09e6ccaca847e396d33c28905a8b45410223600ff00efd8 WHIRLPOOL 72d37a1b96394e7d284e0a74a45966693114459919f3613299ae5d321ba9d65ac6e5fc1738cab24c6cdb6b55a2f438a1b3f844dc592d7c179b4bdc0d30507ac2
 MISC metadata.xml 689 SHA256 04c9ebd461449ed9643e8be1b61ae390e6caff60f8b7ecd3b1881c9e76868af8 SHA512 3350a2908c5ba2ffd6509e103c770002c1c43cd1eda7ea9bafea26310e1f1fbaf1582322a65554e74ff086fbef57c07a488c7381aa5e8ead9e0c047dadab9e47 WHIRLPOOL b1c162a44336b82e33b5c7aa3e28c5fc65a8e02119fd22b924ac99e651ec1b6650bc029aa6005620e75daae9cb38edc2170e22eb344c08d324ba598c5ded7dd8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlNY410ACgkQknrdDGLu8JChWgD+I8QGHEIVbVjeaSKMVqlb9E17
-rNy2gh/zJ5bN8QGcIKQBAJbdmPo9J5yNUa58rxMpbH17zLy5C729suTCiYXrGNw3
-=pWzy
+iL4EAREIAGYFAlPuipZfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDY3QjA4MzdGODg1NUMxMjIzNUQ0MDgxNzky
+N0FERDBDNjJFRUYwOTAACgkQknrdDGLu8JAI6wEAl5/qF7J5v+c1VQZnkKW6cDFI
+QP9XEfwBZhhjqWIUdt8A/Rg+zF5CRUQ+QYmQJ2oaOlkVzpKl9TVJV+d3KbtLwHOi
+=WFps
 -----END PGP SIGNATURE-----
