@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install postinst prepare setup
+DEFINED_PHASES=compile configure install prepare setup
 DEPEND=dev-python/keyring[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/notify-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] )
 DESCRIPTION=A simple backup system inspired by TimeVault and FlyBack, with a GUI for GNOME and KDE4
 EAPI=5
@@ -11,4 +11,4 @@ REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( p
 SLOT=0
 SRC_URI=http://backintime.le-web.org/wp-content/uploads/2009/03/backintime-1.0.24.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=9209f1542648c454b66fdf4af9328c89
+_md5_=937aee14974aafdda1f1cb8057c89914
