@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install postinst prepare setup
+DEFINED_PHASES=compile configure install prepare setup
 DEPEND=dev-python/keyring[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/notify-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] )
 DESCRIPTION=A simple backup system inspired by TimeVault and FlyBack, with a GUI for GNOME and KDE4
 EAPI=5
@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=dev-python/keyring[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/notify-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] )
 REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
 SLOT=0
-SRC_URI=http://backintime.le-web.org/download/backintime/backintime-1.0.34.tar.gz
+SRC_URI=http://backintime.le-web.org/download/backintime/backintime-1.0.36.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=9554587e71caf3c245c3f2460c60fc02
+_md5_=daa756a2d23eb1b1ea9d24b6e11f0994
