@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup
-DEPEND=net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4 kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2 dev-python/pygtk ) dev-python/notify-python =dev-lang/python-2*
-DESCRIPTION=A simple backup system inspired by TimeVault and FlyBack, with a GUI for GNOME and KDE4
-EAPI=3
-HOMEPAGE=http://backintime.le-web.org/
-IUSE=kde gnome
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4 kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2 dev-python/pygtk ) dev-python/notify-python =dev-lang/python-2*
-SLOT=0
-SRC_URI=http://backintime.le-web.org/download/backintime/backintime-1.0.8_src.tar.gz
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=81d3ba0a9c7130f7d7cae858e27e9b65
