@@ -1,6 +1,14 @@
 # ChangeLog for app-backup/backintime
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.20 2014/04/24 10:11:40 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.21 2014/08/15 22:32:49 xmw Exp $
+
+*backintime-1.0.36 (15 Aug 2014)
+
+  15 Aug 2014; Michael Weber <xmw@gentoo.org> +backintime-1.0.36.ebuild,
+  -backintime-1.0.34.ebuild, -backintime-1.0.8-r1.ebuild,
+  -backintime-1.0.8.ebuild, backintime-1.0.24-r1.ebuild:
+  Drop old, fix python_optimize invocation (bug 476776) and version bump (bug
+  519810), thanks Christian Strahl.
 
 *backintime-1.0.34 (24 Apr 2014)
 
